<resources>
    <string name="app_name">Drunjk</string>
    <string name="action_settings">Settings</string>
    <string name="percent">%</string>
    <string-array name="sexOptions">
        <item>Enter Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="alcoholTypes">
        <item>Type of Alcohol</item>
        <item>Beer</item>
        <item>Wine</item>
        <item>Liquor</item>
    </string-array>
    <string-array name="weightOptions">
        <item>lbs</item>
        <item>kgs</item>
    </string-array>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="contacts">Contacts</string>
    <string name="calculate_bac">Calculate BAC</string>
    <string name="calculate">Calculate</string>
    <string name="numDrinks">Number of Drinks</string>
    <string name="hoursElapsed">Hours Elapsed</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="alcohol_percentage">Alcohol Percentage</string>
    <string name="your_bac">Your Blood Alcohol Content is:</string>
    <string name="weight">Weight</string>
    <string name="settings">Settings</string>
    <string name="tips">Tips</string>
    <string name="title_activity_bac_graph">GraphActivity</string>
</resources>
